--- a/ashish-aspire/package.json
+++ b/ashish-aspire/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "primeflex": "^3.3.1",
+    "primeicons": "^5.0.0",
+    "primevue": "3.17",
+    "sass": "^1.69.1",
+    "sass-loader": "^13.3.2",
+    "terser-webpack-plugin": "^5.3.9",
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
